--- a/index.html
+++ b/index.html
@@ -1576,7 +1576,7 @@
                             data-settings='{"_animation":"bounceIn"}' data-widget_type="heading.default">
                             <div class="elementor-widget-container">
                                 <h2 class="elementor-heading-title elementor-size-default">
-                                    Come JOin $ZDENG, Moodeng has seen the light, now he's high as fvck!</h2>
+                                    MOO EATS BRAINS!</h2>
                             </div>
                         </div>
                         <div class="elementor-element elementor-element-486e12b exad-sticky-section-no exad-glass-effect-no jltma-glass-effect-no elementor-invisible elementor-widget elementor-widget-heading" data-id="486e12b" data-element_type="widget" data-settings='{"_animation":"fadeIn"}'
