--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>$KAMI</title>
+    <title>$ZDENG</title>
     <meta name="robots" content="max-image-preview:large" />
     <link rel="alternate" type="application/rss+xml" title="tutter &raquo; Feed" href="https://tuttercoin.com/feed/" />
     <link rel="alternate" type="application/rss+xml" title="tutter &raquo; Comments Feed" href="https://tuttercoin.com/comments/feed/" />
