--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>$ZDENG</title>
+    <link rel="icon" href="/images/nip.png" type="image/x-icon">
     <meta name="robots" content="max-image-preview:large" />
     <link rel="alternate" type="application/rss+xml" title="tutter &raquo; Feed" href="https://tuttercoin.com/feed/" />
     <link rel="alternate" type="application/rss+xml" title="tutter &raquo; Comments Feed" href="https://tuttercoin.com/comments/feed/" />
